aws-terraform/base-code/eks-mix/0001-k8s-examples/LoadBalancer/ingress-with-alb/008-host-base-routing-with-ingress-and-ssl/alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-external-dns
  labels:
    app: app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb" 
    alb.ingress.kubernetes.io/load-balancer-name: external-dns-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    # Heath check settings
    # alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSH settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:788210522308:certificate/c3eebb6d-52d1-47d2-88f9-032c8fa3652a
    # SSL Redirect Setting (http to https) all http will be redirected to https
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External dns settings
    external-dns.alpha.kubernetes.io/hostname: articles.devopseasylearning.net, dev.devopseasylearning.net
spec:
  defaultBackend:
    service:
      name: articles-nodeport-service
      port:
        number: 80
  rules: 
    - host: covid19.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: covid19-nodeport-service
                port: 
                  number: 80
    - host: creative.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: creative-nodeport-service
                port: 
                  number: 80
    - host: halloween.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halloween-nodeport-service
                port: 
                  number: 80
    - host: phone.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phone-nodeport-service
                port: 
                  number: 80
    - host: static.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-nodeport-service
                port: 
                  number: 80
    - host: website.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-nodeport-service
                port: 
                  number: 80
